gccida/g0/fixup_match_1
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fixup_match_1/src/regmove.c:2169:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+CCh] [rbp-4h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fixup_match_1/src/regmove.c:2252:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v11 = ( rtx)q[2]; 
            ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fixup_match_1/src/regmove.c:2285:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( p[2] ) 
^    ~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fixup_match_1/src/regmove.c:2294:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v12 = ( rtx)p[2]; 
            ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fixup_match_1/src/regmove.c:2305:40: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v13 = **( _WORD **)&p[2] == 47 ? ( rtx)p[2] : single_set_2( p, *( rtx *)&p[2]); 
                                       ^~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fixup_match_1/src/regmove.c:2323:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
validate_change( insn, recog_data_0.operand_loc[match_number], src, 1); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fixup_match_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fixup_match_1/src/regmove.c:2361:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
pat = (  struct rtx_def *)insn[2]; 
                          ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fixup_match_1/src/regmove.c:2367:83: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( insna = p; rtx_class[*( _WORD *)insna] != 105 || pat != (  struct rtx_def *)insna[2]; insna = ( rtx)insna[1] ) 
                                                                                  ^~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fixup_match_1/src/regmove.c:2367:107: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( insna = p; rtx_class[*( _WORD *)insna] != 105 || pat != (  struct rtx_def *)insna[2]; insna = ( rtx)insna[1] ) 
                                                                                                          ^~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fixup_match_1/src/regmove.c:2388:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( q_0 = ( rtx)insna[1]; q_0; q_0 = ( rtx)q_0[1] ) 
                  ^~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fixup_match_1/src/regmove.c:2388:46: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( q_0 = ( rtx)insna[1]; q_0; q_0 = ( rtx)q_0[1] ) 
                                             ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fixup_match_1/src/regmove.c:2403:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v19 = ( rtx)q_0[2]; 
            ^~~~~~
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fixup_match_1/src/obj/regmove.o] Error 1
